fix(api/todo): correct doc
